# hunetchamber

./: .gitignore  README.md  gateway_server.py  test_http_server.py
RP2350-Touch-LCD-4/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/button/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/buzzer/: buzzer.c
RP2350-Touch-LCD-4/examples/gui/: CMakeLists.txt  image1.h  image2.h
RP2350-Touch-LCD-4/examples/hello_world/serial/: hello_serial.c
RP2350-Touch-LCD-4/examples/hunet_dashboard/: CMakeLists.txt  hunet_dashboard.c
RP2350-Touch-LCD-4/examples/hunet_pico/: hunet_pico.c
RP2350-Touch-LCD-4/examples/hunet_xiao/: hunet_xiao.c
RP2350-Touch-LCD-4/examples/lcd/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/lcd/lcd_flush_rgb/: CMakeLists.txt  lcd_flush_rgb.c
RP2350-Touch-LCD-4/examples/lcd/lcd_image/: img_1.h  img_2.h  img_3.h  lcd_image.c
RP2350-Touch-LCD-4/examples/lvgl/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/lvgl/lvgl_example/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/lvgl/lvgl_factory/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/lvgl/lvgl_factory/lvgl_ui/: CMakeLists.txt  lvgl_ui.c  lvgl_ui.h
RP2350-Touch-LCD-4/examples/lvgl/lvgl_factory/lvgl_ui/screen/: color_screen.c  color_screen.h  main_screen.c  main_screen.h
RP2350-Touch-LCD-4/examples/lvgl/lvgl_pcf85063/: CMakeLists.txt  lvgl_pcf85063.c
RP2350-Touch-LCD-4/examples/lvgl/lvgl_qmi8658/: CMakeLists.txt
RP2350-Touch-LCD-4/examples/sd_card_sdio/: CMakeLists.txt  sd_card_sdio.c
archive/farm_sensor_gateway/: rp2040_solar.py
archive/fridge_controller/old_wrappers/: main.py  web_controller.py
docs/: DEVLOG.md  PINMAP_PICO.md  PINMAP_W5500.md  PINMAP_XIAO.md  PROJECT_HANDOFF_LOG.md  SENSORS.md  W5500_DEBUG_STATUS.md
firmware/: check_rs485_sensors.py  rp2040_soil.py  test_w5500.py  test_w5500_dhcp.py
firmware/legacy/: rp2040_co2.py  rp2040_main.py  rp2040_temp_humidity.py
firmware/lib/: wiznet5k.py
firmware/pico/: main.py
firmware/tests/: check_rs485_sensors_dir.py  test_hello.py  test_http_post.py  test_phy_modes.py  test_w5500_dhcp_pico.py
projects/farm_sensor_gateway/: gateway_server.py  mac_monitor.py  test_network.sh  test_repl.py  web_monitor.py
projects/farm_sensor_gateway/docs/: DEVLOG.md  GATEWAY_WEBHOOK_PLAN.md  LCD_DASHBOARD.md  RESEARCH_LOG.md  SENSORS.md  W5500_DEBUG_STATUS.md
projects/farm_sensor_gateway/firmware/pico/: main.py
projects/farm_sensor_gateway/firmware/tests/: probe_w5500_spi.py  test_rp2350_rs485_display.py  test_w5500_diag.py  test_w5500_link_pico.py  test_w5500_pico.py
projects/farm_sensor_gateway/scripts/: setup_sensor_db.py
projects/fridge_controller/: CLAUDE.md  README.md
projects/fridge_controller/dashboard_vite/: index.html  package-lock.json  package.json
projects/fridge_controller/docs/: 00_OVERVIEW.md  01_CONTROL_LOGIC.md  02_WIRING.md  03_DATA_FLOW.md  04_DASHBOARD.md  05_OPERATIONS.md  06_TEST_LOG.md  07_RESEARCH_SUMMARY.md
projects/fridge_controller/gateway/: fridge_gateway_server.py  setup_fridge_db.py
projects/fridge_controller/rp2350_dashboard/: README.md
projects/fridge_controller/tools/: web_controller.py
projects/pico_nutrient_system/: _capture_serial.py  breadboard_layout.html  display_layout.html  display_rs485.py  display_rs485_layout.html  main.py  network_topology.html  pico_pinmap.html  sensor_http_post.py  sensor_main.py  sensors.py  system_diagram.html  tools_change_sensor_addr.py
projects/pico_nutrient_system/sensor_docs/: PINMAP_PICO.md  SENSORS.md  farm_main.py
research_diary/: 2026-04-14.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md
shared/: README.md
shared/tools/: upload.py
(+20 files in other folders)
