add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/hello_world)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lcd)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/qmi8658_raw_out)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/rtc_pcf85063)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/sd_card_sdio)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/battery)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/buzzer)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/gui)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/rs485)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/can)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/button)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/hunet_xiao)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/hunet_pico)